<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FormValidation</string>
    <string name="name_text">Name</string>
    <string name="edit_name">Enter your name</string>
    <string name="action_settings">Settings</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="experience">Work Exp</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="edit_experience">Enter Work Ex</string>
    <string name="edit_phone">Enter Phone</string>
    <string name="edit_email">Enter Email</string>
    <string name="button_confirm">Confirm</string>
    <string name="submit_button">Submit</string>
    <string name="edit_button">Edit</string>
    <string name="thankyou_message">Thank you for submitting your details. To submit a new form click new registration.
        
    </string>
	<string name="new_registration_button">New Registration</string>
    <string-array name="age_array">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
    </string-array>
    <string-array name="gender_array">
        <item>M</item>
        <item>F</item>
    </string-array>

    <string name="title_activity_display_data">DisplayDataActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_submit">Thank you</string>

</resources>
