<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tavant.formvalidation.MainActivity"
     >

    
    <TextView android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textStyle="bold"
        android:textSize="25sp"
        />
 
    <!-- <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <TextView android:id="@+id/lastname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname_text"
        android:textStyle="bold"
        android:textSize="25"/>
    
    <EditText android:id="@+id/edit_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_lastname"
        android:layout_weight="1"/>
    </LinearLayout> -->
    <!-- <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"/> -->

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/name_text"
        android:layout_marginLeft="@dimen/text_margin_left"
        android:layout_marginStart="@dimen/text_margin_left"
        android:layout_toRightOf="@+id/name_text"
        android:layout_toEndOf="@+id/name_text"
        android:ems="10"
        android:hint="@string/edit_name" >
    </EditText>
    <TextView android:id="@+id/age"
        android:layout_below="@id/name_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/age"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/margin_top"/>
    
    <Spinner android:id="@+id/age_spinner"
        android:layout_width="@dimen/age_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/edit_name"
        android:layout_toRightOf="@+id/age"
        android:layout_toEndOf="@+id/age"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    
    <TextView android:id="@+id/gender"
        android:layout_below="@id/age"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/margin_top"/>
    
     <Spinner android:id="@+id/gender_spinner"
        android:layout_width="@dimen/age_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/age"
        android:layout_toRightOf="@+id/gender"
        android:layout_toEndOf="@+id/gender"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
     
     <TextView android:id="@+id/experience"
        android:layout_below="@id/gender"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/experience"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/margin_top"/>
     
     <TextView android:id="@+id/email"
        android:layout_below="@id/experience"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/margin_top"/>
     
     <TextView android:id="@+id/phone"
        android:layout_below="@id/email"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/phone"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/margin_top"/>

</RelativeLayout>
